--- a/game/db/game.lpc.html
+++ b/game/db/game.lpc.html
@@ -64,6 +64,102 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >inst|HD6</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|HD5</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|HD4</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|HD2</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|HD1</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst|HD0</TD>
+<TD >32</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >28</TD>
+<TD >7</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >28</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst</TD>
 <TD >78</TD>
 <TD >0</TD>
